--- a/R/lib/sdautils/DESCRIPTION
+++ b/R/lib/sdautils/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: sdautils
+Package: SDAutils
 Type: Package
 Title: Utility functions
 Version: 0.1.0
 Authors: Giovanni Ammendola, Vincenzo Petrone, Andrea Valitutto, Salvatore Ventre
 Maintainer: <v.petrone6@studenti.unisa.it>
-Description: A list of utiliy functions
+Description: A list of utiliy functions for SDA 2020 project
 License: UniSa
 Encoding: UTF-8
 LazyData: true
